--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    {% block head %}{% endblock %}
+    {% block head %}
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        <title></title>
+    {% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+{% block body %}
+{% endblock %}
 </body>
 </html>
