--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,88 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Task Master</title>
-{% endblock %}
+    <title>Todo List</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+{% endblock %}
 
 {% block body %}
-<div class="content">
-    <h1>Task Master</h1>
+    <section class="vh-100">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-lg-9 col-xl-7">
+                    <div class="card rounded-3">
+                        <div class="card-body p-4">
+                            <h4 class="text-center my-3 pb-3">To Do List</h4>
 
-    <table>
-        <tr>
-            <th>Task</th>
-            <th>Added</th>
-            <th>Actions</th>
-        </tr>
-        {% for task in tasks %}
-            <tr>
-                <td>{{ task.content }}</td>
-                <td>{{ task.date_created.date() }}</td>
-                <td>
-                    <a href="/delete/{{ task.id }}">Delete</a>
-                    <br>
-                    <a href="/update/{{ task.id }}">Update</a>
-                </td>
-            </tr>
-        {% endfor %}
-    </table>
+                            <form class="row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2 task-form"
+                                  action="/" method="POST">
+                                <div class="col-12">
+                                    <div class="form-outline">
+                                        <input type="text" id="content" name="content" class="form-control"/>
+                                        <label class="form-label" for="content">Enter a task here</label>
 
-    <form action="/" method="POST" class="task-form">
-        <input type="text" name="content" id="content">
-        <input type="submit" value="Add Task">
-    </form>
-</div>
+                                        <div class="col-12 text-right">
+                                            <button type="submit" class="btn btn-primary">Save</button>
+                                        </div>
+
+                                    </div>
+                                </div>
+
+                            </form>
+
+
+                            <table class="table mb-4">
+                                <thead>
+                                <tr>
+                                    <th scope="col">No.</th>
+                                    <th scope="col">Todo item</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for task in tasks %}
+                                    <tr>
+                                        <th scope="row">{{ task.id }}</th>
+                                        <td>{{ task.content }}</td>
+                                        <td>{{ task.date_created }}</td>
+                                        <td>
+                                            <a href="/delete/{{ task.id }}" style="display: inline-block">
+                                                <button class="btn btn-danger">
+                                                    Delete
+                                                </button>
+                                            </a>
+                                            <a href="/update/{{ task.id }}" style="display: inline-block">
+                                                <button class="btn btn-warning">
+                                                    Update
+                                                </button>
+                                            </a>
+                                            <!-- <button href="/admin" type="submit" class="btn btn-danger">Delete</button> -->
+                                            <!-- <button href="/admin" type="submit" class="btn btn-success ms-1">Finished</button> -->
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
+
+
+<!-- <div class="content">
+        <h1>Update Task</h1>
+
+        <form action="/update/{{ task.id }}" method="POST" class="task-form">
+            <input type="text" name="content" id="content" value="{{ task.content }}">
+            <input type="submit" value="Add Task">
+        </form>
+    </div>
+-->
