--- a/templates/update.html
+++ b/templates/update.html
@@ -1,18 +1,40 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Task Master</title>
-{% endblock %}
+    <title>Update task</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+{% endblock %}
 
 {% block body %}
-<div class="content">
-    <h1>Update Task</h1>
+    <section class="vh-100">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col col-lg-9 col-xl-7">
+                    <div class="card rounded-3">
+                        <div class="card-body p-4">
+                            <h4 class="text-center my-3 pb-3">Update Task</h4>
+                            <div class="content">
+                                <form class="task-form row row-cols-lg-auto g-3 justify-content-center align-items-center mb-4 pb-2 task-form"
+                                      action="/update/{{ task.id }}" method="POST">
+                                    <div class="col-12">
+                                        <input class="form-control" type="text" id="content" name="content" value="{{ task.content }}"/><br>
+                                        <label class="form-label" for="content">Update task here</label>
 
-    <form action="/update/{{ task.id }}" method="POST" class="task-form">
-        <input type="text" name="content" id="content" value="{{ task.content }}">
-        <input type="submit" value="Add Task">
-    </form>
-</div>
+                                        <div class="col-12 text-right">
+                                            <!-- <input type="submit" value="Add Task"> -->
+                                            <button type="submit" class="btn btn-warning">Update</button>
+                                        </div>
 
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
+
