--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,34 +1,63 @@
-body{
+body {
     margin: 0;
     font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
 }
 
-.content{
+.content {
     text-align: center;
 }
 
-input{
+input {
     margin-top: 1%;
     width: 8.8%;
     height: 20px;
 }
 
-table{
-    border: 1px solid black;
+table {
+    /*border: 1px solid black;*/
     margin-left: auto;
     margin-right: auto;
 }
 
-tr{
-    border: 1px solid black;
+tr {
+    /*border: 1px solid black;*/
 }
 
-th{
-    border: 1px solid black;
+th {
+    /*border: 1px solid black;*/
 }
 
-td{
+td {
     text-align: center;
     padding: 5px;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+}
+
+td.td-content {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.emptyTextWarning {
+    padding: 20px;
+    background-color: #c82333;
+    color: white;
+    opacity: 1;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+}
+
+.closeButton {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closeButton:hover {
+    color: black;
 }
